finshed relase one

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "takafully",
-  "homepage": "http://transfer.enayapay.com",
+  "homepage": "https://transfer.enayapay.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
